Add support for imp.ext.gpid